Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UStaticMeshComponent.h

	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bCastDistanceFieldIndirectShadow_GET(UStaticMeshComponent* Ptr) { return Ptr->bCastDistanceFieldIndirectShadow; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bCastDistanceFieldIndirectShadow_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bCastDistanceFieldIndirectShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bDisallowMeshPaintPerInstance_GET(UStaticMeshComponent* Ptr) { return Ptr->bDisallowMeshPaintPerInstance; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bDisallowMeshPaintPerInstance_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bDisallowMeshPaintPerInstance = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bDrawMeshCollisionIfComplex_GET(UStaticMeshComponent* Ptr) { return Ptr->bDrawMeshCollisionIfComplex; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bDrawMeshCollisionIfComplex_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bDrawMeshCollisionIfComplex = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bDrawMeshCollisionIfSimple_GET(UStaticMeshComponent* Ptr) { return Ptr->bDrawMeshCollisionIfSimple; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bDrawMeshCollisionIfSimple_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bDrawMeshCollisionIfSimple = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bForceNavigationObstacle_GET(UStaticMeshComponent* Ptr) { return Ptr->bForceNavigationObstacle; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bForceNavigationObstacle_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bForceNavigationObstacle = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bIgnoreInstanceForTextureStreaming_GET(UStaticMeshComponent* Ptr) { return Ptr->bIgnoreInstanceForTextureStreaming; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bIgnoreInstanceForTextureStreaming_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bIgnoreInstanceForTextureStreaming = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bOverrideDistanceFieldSelfShadowBias_GET(UStaticMeshComponent* Ptr) { return Ptr->bOverrideDistanceFieldSelfShadowBias; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bOverrideDistanceFieldSelfShadowBias_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bOverrideDistanceFieldSelfShadowBias = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bOverrideLightMapRes_GET(UStaticMeshComponent* Ptr) { return Ptr->bOverrideLightMapRes; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bOverrideLightMapRes_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bOverrideLightMapRes = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bOverrideMinLOD_GET(UStaticMeshComponent* Ptr) { return Ptr->bOverrideMinLOD; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bOverrideMinLOD_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bOverrideMinLOD = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bOverrideNavigationExport_GET(UStaticMeshComponent* Ptr) { return Ptr->bOverrideNavigationExport; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bOverrideNavigationExport_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bOverrideNavigationExport = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bOverrideWireframeColor_GET(UStaticMeshComponent* Ptr) { return Ptr->bOverrideWireframeColor; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bOverrideWireframeColor_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bOverrideWireframeColor = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bReverseCulling_GET(UStaticMeshComponent* Ptr) { return Ptr->bReverseCulling; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bReverseCulling_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bReverseCulling = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bUseDefaultCollision_GET(UStaticMeshComponent* Ptr) { return Ptr->bUseDefaultCollision; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bUseDefaultCollision_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bUseDefaultCollision = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_bUseSubDivisions_GET(UStaticMeshComponent* Ptr) { return Ptr->bUseSubDivisions; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_bUseSubDivisions_SET(UStaticMeshComponent* Ptr, uint8 Value) { Ptr->bUseSubDivisions = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_DistanceFieldIndirectShadowMinVisibility_GET(UStaticMeshComponent* Ptr) { return Ptr->DistanceFieldIndirectShadowMinVisibility; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_DistanceFieldIndirectShadowMinVisibility_SET(UStaticMeshComponent* Ptr, float Value) { Ptr->DistanceFieldIndirectShadowMinVisibility = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_DistanceFieldSelfShadowBias_GET(UStaticMeshComponent* Ptr) { return Ptr->DistanceFieldSelfShadowBias; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_DistanceFieldSelfShadowBias_SET(UStaticMeshComponent* Ptr, float Value) { Ptr->DistanceFieldSelfShadowBias = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_ForcedLodModel_GET(UStaticMeshComponent* Ptr) { return Ptr->ForcedLodModel; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_ForcedLodModel_SET(UStaticMeshComponent* Ptr, int32 Value) { Ptr->ForcedLodModel = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_LightmassSettings_GET(UStaticMeshComponent* Ptr) { return (INT_PTR)&(Ptr->LightmassSettings); }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_LightmassSettings_SET(UStaticMeshComponent* Ptr, INT_PTR Value) { Ptr->LightmassSettings = *(FLightmassPrimitiveSettings*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_MinLOD_GET(UStaticMeshComponent* Ptr) { return Ptr->MinLOD; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_MinLOD_SET(UStaticMeshComponent* Ptr, int32 Value) { Ptr->MinLOD = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_OverriddenLightMapRes_GET(UStaticMeshComponent* Ptr) { return Ptr->OverriddenLightMapRes; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_OverriddenLightMapRes_SET(UStaticMeshComponent* Ptr, int32 Value) { Ptr->OverriddenLightMapRes = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_PreviousLODLevel_GET(UStaticMeshComponent* Ptr) { return Ptr->PreviousLODLevel; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_PreviousLODLevel_SET(UStaticMeshComponent* Ptr, int32 Value) { Ptr->PreviousLODLevel = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_StreamingDistanceMultiplier_GET(UStaticMeshComponent* Ptr) { return Ptr->StreamingDistanceMultiplier; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_StreamingDistanceMultiplier_SET(UStaticMeshComponent* Ptr, float Value) { Ptr->StreamingDistanceMultiplier = Value; }
	
	DOTNET_EXPORT auto E_PROP_UStaticMeshComponent_SubDivisionStepSize_GET(UStaticMeshComponent* Ptr) { return Ptr->SubDivisionStepSize; }
	DOTNET_EXPORT void E_PROP_UStaticMeshComponent_SubDivisionStepSize_SET(UStaticMeshComponent* Ptr, int32 Value) { Ptr->SubDivisionStepSize = Value; }
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetMemberNameChecked_StaticMesh(UStaticMeshComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetMemberNameChecked_StaticMesh());
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetTextureLightAndShadowMapMemoryUsage(UStaticMeshComponent* Self, int32 InWidth, int32 InHeight, int32 OutLightMapMemoryUsage, int32 OutShadowMapMemoryUsage)
	{
		auto _p0 = InWidth;
		auto _p1 = InHeight;
		auto& _p2 = OutLightMapMemoryUsage;
		auto& _p3 = OutShadowMapMemoryUsage;
		Self->GetTextureLightAndShadowMapMemoryUsage(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetTextureStreamingTransformScale(UStaticMeshComponent* Self)
	{
		return Self->GetTextureStreamingTransformScale();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_HasLightmapTextureCoordinates(UStaticMeshComponent* Self)
	{
		return Self->HasLightmapTextureCoordinates();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ReleaseResources(UStaticMeshComponent* Self)
	{
		Self->ReleaseResources();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RemoveInstanceVertexColors(UStaticMeshComponent* Self)
	{
		Self->RemoveInstanceVertexColors();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RemoveInstanceVertexColorsFromLOD(UStaticMeshComponent* Self, int32 LODToRemoveColorsFrom)
	{
		auto _p0 = LODToRemoveColorsFrom;
		Self->RemoveInstanceVertexColorsFromLOD(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RequiresOverrideVertexColorsFixup(UStaticMeshComponent* Self)
	{
		return Self->RequiresOverrideVertexColorsFixup();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetDistanceFieldSelfShadowBias(UStaticMeshComponent* Self, float NewValue)
	{
		auto _p0 = NewValue;
		Self->SetDistanceFieldSelfShadowBias(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetForcedLodModel(UStaticMeshComponent* Self, int32 NewForcedLodModel)
	{
		auto _p0 = NewForcedLodModel;
		Self->SetForcedLodModel(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetMaterialPreview(UStaticMeshComponent* Self, int32 InMaterialIndexPreview)
	{
		auto _p0 = InMaterialIndexPreview;
		Self->SetMaterialPreview(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetReverseCulling(UStaticMeshComponent* Self, bool ReverseCulling)
	{
		auto _p0 = ReverseCulling;
		Self->SetReverseCulling(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetSectionPreview(UStaticMeshComponent* Self, int32 InSectionIndexPreview)
	{
		auto _p0 = InSectionIndexPreview;
		Self->SetSectionPreview(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetStaticLightingMapping(UStaticMeshComponent* Self, bool bTextureMapping, int32 ResolutionToUse)
	{
		auto _p0 = bTextureMapping;
		auto _p1 = ResolutionToUse;
		return Self->SetStaticLightingMapping(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SupportsDefaultCollision(UStaticMeshComponent* Self)
	{
		return Self->SupportsDefaultCollision();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_UpdateCollisionFromStaticMesh(UStaticMeshComponent* Self)
	{
		Self->UpdateCollisionFromStaticMesh();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_UsesTextureLightmaps(UStaticMeshComponent* Self, int32 InWidth, int32 InHeight)
	{
		auto _p0 = InWidth;
		auto _p1 = InHeight;
		return Self->UsesTextureLightmaps(_p0, _p1);
	}