Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/UStaticMeshComponent.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_UStaticMeshComponent_GetMemberNameChecked_StaticMesh(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UStaticMeshComponent_GetTextureLightAndShadowMapMemoryUsage(IntPtr self, int inWidth, int inHeight, int outLightMapMemoryUsage, int outShadowMapMemoryUsage);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern float E_UStaticMeshComponent_GetTextureStreamingTransformScale(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UStaticMeshComponent_HasLightmapTextureCoordinates(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UStaticMeshComponent_ReleaseResources(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UStaticMeshComponent_RemoveInstanceVertexColors(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UStaticMeshComponent_RemoveInstanceVertexColorsFromLOD(IntPtr self, int lODToRemoveColorsFrom);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UStaticMeshComponent_RequiresOverrideVertexColorsFixup(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UStaticMeshComponent_SetDistanceFieldSelfShadowBias(IntPtr self, float newValue);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UStaticMeshComponent_SetForcedLodModel(IntPtr self, int newForcedLodModel);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UStaticMeshComponent_SetMaterialPreview(IntPtr self, int inMaterialIndexPreview);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UStaticMeshComponent_SetReverseCulling(IntPtr self, bool reverseCulling);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UStaticMeshComponent_SetSectionPreview(IntPtr self, int inSectionIndexPreview);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UStaticMeshComponent_SetStaticLightingMapping(IntPtr self, bool bTextureMapping, int resolutionToUse);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UStaticMeshComponent_SupportsDefaultCollision(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UStaticMeshComponent_UpdateCollisionFromStaticMesh(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UStaticMeshComponent_UsesTextureLightmaps(IntPtr self, int inWidth, int inHeight);
		
		#endregion
		
		#region Property
		
		/// <summary>
		/// Whether to use the mesh distance field representation (when present) for shadowing indirect lighting (from lightmaps or skylight) on Movable components.
		/// <para>This works like capsule shadows on skeletal meshes, except using the mesh distance field so no physics asset is required. </para>
		/// The StaticMesh must have 'Generate Mesh Distance Field' enabled, or the project must have 'Generate Mesh Distance Fields' enabled for this feature to work.
		/// </summary>
		public byte DistanceFieldIndirectShadow
		{
			get => E_PROP_UStaticMeshComponent_bCastDistanceFieldIndirectShadow_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bCastDistanceFieldIndirectShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// If true, mesh painting is disallowed on this instance. Set if vertex colors are overridden in a construction script.
		/// </summary>
		public byte bDisallowMeshPaintPerInstance
		{
			get => E_PROP_UStaticMeshComponent_bDisallowMeshPaintPerInstance_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bDisallowMeshPaintPerInstance_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Draw mesh collision if used for complex collision
		/// </summary>
		public byte bDrawMeshCollisionIfComplex
		{
			get => E_PROP_UStaticMeshComponent_bDrawMeshCollisionIfComplex_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bDrawMeshCollisionIfComplex_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Draw mesh collision if used for simple collision
		/// </summary>
		public byte bDrawMeshCollisionIfSimple
		{
			get => E_PROP_UStaticMeshComponent_bDrawMeshCollisionIfSimple_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bDrawMeshCollisionIfSimple_SET(NativePointer, value);
		}

		public byte bForceNavigationObstacle
		{
			get => E_PROP_UStaticMeshComponent_bForceNavigationObstacle_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bForceNavigationObstacle_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Ignore this instance of this static mesh when calculating streaming information.
		/// <para>This can be useful when doing things like applying character textures to static geometry, </para>
		/// to avoid them using distance-based streaming.
		/// </summary>
		public byte bIgnoreInstanceForTextureStreaming
		{
			get => E_PROP_UStaticMeshComponent_bIgnoreInstanceForTextureStreaming_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bIgnoreInstanceForTextureStreaming_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Whether to override the DistanceFieldSelfShadowBias setting of the static mesh asset with the DistanceFieldSelfShadowBias of this component.
		/// </summary>
		public byte bOverrideDistanceFieldSelfShadowBias
		{
			get => E_PROP_UStaticMeshComponent_bOverrideDistanceFieldSelfShadowBias_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bOverrideDistanceFieldSelfShadowBias_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Whether to override the lightmap resolution defined in the static mesh.
		/// </summary>
		public byte bOverrideLightMapRes
		{
			get => E_PROP_UStaticMeshComponent_bOverrideLightMapRes_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bOverrideLightMapRes_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Whether to override the MinLOD setting of the static mesh asset with the MinLOD of this component.
		/// </summary>
		public byte bOverrideMinLOD
		{
			get => E_PROP_UStaticMeshComponent_bOverrideMinLOD_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bOverrideMinLOD_SET(NativePointer, value);
		}

		public byte bOverrideNavigationExport
		{
			get => E_PROP_UStaticMeshComponent_bOverrideNavigationExport_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bOverrideNavigationExport_SET(NativePointer, value);
		}

		
		/// <summary>
		/// If true, WireframeColorOverride will be used. If false, color is determined based on mobility and physics simulation settings
		/// </summary>
		public byte bOverrideWireframeColor
		{
			get => E_PROP_UStaticMeshComponent_bOverrideWireframeColor_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bOverrideWireframeColor_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Controls whether the static mesh component's backface culling should be reversed
		/// </summary>
		public byte bReverseCulling
		{
			get => E_PROP_UStaticMeshComponent_bReverseCulling_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bReverseCulling_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Use the collision profile specified in the StaticMesh asset.
		/// </summary>
		public byte bUseDefaultCollision
		{
			get => E_PROP_UStaticMeshComponent_bUseDefaultCollision_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bUseDefaultCollision_SET(NativePointer, value);
		}

		public byte bUseSubDivisions
		{
			get => E_PROP_UStaticMeshComponent_bUseSubDivisions_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_bUseSubDivisions_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Controls how dark the dynamic indirect shadow can be.
		/// </summary>
		public float DistanceFieldIndirectShadowMinVisibility
		{
			get => E_PROP_UStaticMeshComponent_DistanceFieldIndirectShadowMinVisibility_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_DistanceFieldIndirectShadowMinVisibility_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Useful for reducing self shadowing from distance field methods when using world position offset to animate the mesh's vertices.
		/// </summary>
		public float DistanceFieldSelfShadowBias
		{
			get => E_PROP_UStaticMeshComponent_DistanceFieldSelfShadowBias_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_DistanceFieldSelfShadowBias_SET(NativePointer, value);
		}

		
		/// <summary>
		/// If 0, auto-select LOD level. if >0, force to (ForcedLodModel-1).
		/// </summary>
		public int ForcedLodModel
		{
			get => E_PROP_UStaticMeshComponent_ForcedLodModel_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_ForcedLodModel_SET(NativePointer, value);
		}

		
		/// <summary>
		/// The Lightmass settings for this object.
		/// </summary>
		public FLightmassPrimitiveSettings LightmassSettings
		{
			get => E_PROP_UStaticMeshComponent_LightmassSettings_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_LightmassSettings_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Specifies the smallest LOD that will be used for this component.
		/// <para>This is ignored if ForcedLodModel is enabled. </para>
		/// </summary>
		public int MinLOD
		{
			get => E_PROP_UStaticMeshComponent_MinLOD_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_MinLOD_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Light map resolution to use on this component, used if bOverrideLightMapRes is true and there is a valid StaticMesh.
		/// </summary>
		public int OverriddenLightMapRes
		{
			get => E_PROP_UStaticMeshComponent_OverriddenLightMapRes_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_OverriddenLightMapRes_SET(NativePointer, value);
		}

		public int PreviousLODLevel
		{
			get => E_PROP_UStaticMeshComponent_PreviousLODLevel_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_PreviousLODLevel_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Allows adjusting the desired streaming distance of streaming textures that uses UV 0.
		/// <para>1.0 is the default, whereas a higher value makes the textures stream in sooner from far away. </para>
		/// A lower value (0.0-1.0) makes the textures stream in later (you have to be closer).
		/// <para>Value can be < 0 (from legcay content, or code changes) </para>
		/// </summary>
		public float StreamingDistanceMultiplier
		{
			get => E_PROP_UStaticMeshComponent_StreamingDistanceMultiplier_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_StreamingDistanceMultiplier_SET(NativePointer, value);
		}

		public int SubDivisionStepSize
		{
			get => E_PROP_UStaticMeshComponent_SubDivisionStepSize_GET(NativePointer);
			set => E_PROP_UStaticMeshComponent_SubDivisionStepSize_SET(NativePointer, value);
		}

		#endregion
		
		#region ExternMethods
